--- a/README
+++ b/README
@@ -3,23 +3,22 @@ EVERYONE:
 Read LICENSE.  It's a 2-clause BSD license, but you should read it anyway.
 
 
-PROGRAMMERS:
+DEVELOPERS:
 ------------
 Read OVERVIEW to see what the modules are used for.  Read EXAMPLE to see some
 examples of callbacks and command written for the bot.  Read STYLE if you ever
 wish to contribute.
 
-All contributions need to assign the copyright to Jeremiah Fincher for
-licensing and modification purposes.  I'll probably change the modules to fit
-STYLE if they don't already fit.  (Of course, that doesn't mean 'all
-modifications'; only if you want your code to be included in the *standard
-distribution* of Supybot do you need to assign to me the copyright.  If you
-don't mind distributing your modifications or additions elsewhere, by all means
-keep the copyright.)
-
-Use PyChecker.  Believe me, it makes things better.
+Use PyChecker.  Believe me, it makes things better.  A sample
+.pycheckrc file is included as tools/pycheckrc.  Copy this to your
+~/.pycheckrc and you'll be able to check your code with the same
+stringent guidelines I've found useful to check my code.
 
 
 USERS:
 ------
-<to be inserted later, when scripts/setup.py is done>
+All commands should be run from the root directory, never from any
+subdirectory such as conf/, log/, src/, or plugins/.
+
+All you have to do to get a working bot is run scripts/setup.py and
+answer the questions!
