--- a/TODO
+++ b/TODO
@@ -1,11 +1,11 @@
 To do before next major release (0.8.0):
 
 Change NickServ plugin into Services plugin.
-Add callback based on PrivmsgRegexp that allows ordering of callbacks.
 Fix Quotes plugin.
 Fix (or nuke :)) Factoids plugin.
 Fix Infobot plugin.
 Fix website.
+Write some more tests (Alias module, etc.)
 
 To do later:
 
