--- a/TODO
+++ b/TODO
@@ -1,12 +1,11 @@
 To do before next major release (0.8.0):
 
-Change NickServ plugin into Services plugin.
-Fix Quotes plugin.
-Fix (or nuke :)) Factoids plugin.
-Fix Infobot plugin.
-Fix website.
-Write some more tests (Alias module, etc.)
+Fix website.  It needs more and better documentation.
+Fix documentation -- docs/EXAMPLE needs updated.
+Write some more tests (but those are always useful :))
+Do some actual testing with Real Users.
 
 To do later:
 
+Fix Infobot plugin.
 Fix Enforcer plugin.
