--- a/README
+++ b/README
@@ -3,18 +3,6 @@ EVERYONE:
 Read LICENSE.  It's a 2-clause BSD license, but you should read it anyway.
 
 
-DEVELOPERS:
-------------
-Read OVERVIEW to see what the modules are used for.  Read EXAMPLE to see some
-examples of callbacks and command written for the bot.  Read STYLE if you ever
-wish to contribute.
-
-Use PyChecker.  Believe me, it makes things better.  A sample
-.pycheckrc file is included as tools/pycheckrc.  Copy this to your
-~/.pycheckrc and you'll be able to check your code with the same
-stringent guidelines I've found useful to check my code.
-
-
 USERS:
 ------
 First, you gotta have Python 2.3 for this.  That's alright, though,
@@ -36,3 +24,23 @@ either network works) and ask questions.  We'll be happy to help
 wherever we can.  And by all means, if you find anything hard to
 understand or think you know of a better way to do something, *please*
 post it on Sourceforge.net so we can improve the bot!
+
+
+DEVELOPERS:
+------------
+Read OVERVIEW to see what the modules are used for.  Read EXAMPLE to see some
+examples of callbacks and command written for the bot.  Read STYLE if you ever
+wish to contribute.
+
+Use PyChecker.  Believe me, it makes things better.  A sample
+.pycheckrc file is included as tools/pycheckrc.  Copy this to your
+~/.pycheckrc and you'll be able to check your code with the same
+stringent guidelines I've found useful to check my code.
+
+Use PyLint.  It's even better than PyChecker.  A sample .pylintrc file
+is included as tools/pylintrc.  Copy this to ~/.pylintrc and you'll be
+able to check your code with the same stringent guidelines I've found
+useful to check my code. (deja vu? :))
+
+If you run the tests on Windows (or on a modem connection), be sure to 
+exclude (test/test.py -e) test\test_Debian.py.  
