--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2003-10-11  Jeremy Fincher  <jfincher@functor>
 
-	* Version 0.73.1!
+	* Fixed handling of the secure flag by ircdb.IrcUser.setAuth;
+	previously it didn't prevent someone with an unmatched hostmask
+	from identifying.
 
 	* Fixed imports in the DCC plugin.
 
