--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+	* Changed Lookup so added lookups are added in the Lookup plugin
+	itself so there's no dependency on Alias, and so loaded lookups
+	can be seen via 'list Lookup'.
+	
 	* Added User.list command to list registered users.
 	
 	* Fixed bug #850931 as well as several other minor bugs in
